修改接口描述
